--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,22 @@
+Thumbs.db
+.svn
+*.orig
 *.dcu
-*.~*~
-*.local
-*.identcache
-__history
-*.drc
-*.map
+*.ppu
+*.rst
+*.compiled
+*.or
+*.o
+*.a
 *.exe
 *.dll
-bin/*
+*.identcache
+*.bdsproj.local
+*.bak
+*~
+Makefile
+config.log
+config.status
+__history
+aclocal.m4
+autom4te.cache/
