Added new textures

--- a/game/themes/Deluxe/Blue.ini
+++ b/game/themes/Deluxe/Blue.ini
@@ -36,7 +36,7 @@ Select_ArrowLeft = [interface]select_arrow_left.png
 Select_ArrowRight = [interface]select_arrow_right.png
 
 #Backgrounds
-LoadingBG      = [bg-load]blue.jpg
+LoadingBG      = [bg-load]basic.jpg
 MainBG         = [bg-main]blue.jpg
 SongBG         = [bg-main]blue.jpg
 ScoreScreenBG  = [bg-main]blue.jpg
