--- a/src/WorldParty for Windows.lpi
+++ b/src/WorldParty for Windows.lpi
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="9"/>
+    <Version Value="10"/>
     <PathDelim Value="\"/>
     <General>
       <Flags>
@@ -16,7 +16,6 @@
       <XPManifest>
         <DpiAware Value="True"/>
       </XPManifest>
-      <Icon Value="0"/>
     </General>
     <VersionInfo>
       <MajorVersionNr Value="1"/>
@@ -481,7 +480,7 @@
       <Unit111>
         <Filename Value="lib\bass\delphi\bass.pas"/>
         <IsPartOfProject Value="True"/>
-        <UnitName Value="Bass"/>
+        <UnitName Value="BASS"/>
       </Unit111>
       <Unit112>
         <Filename Value="webSDK\UWebSDK.pas"/>
@@ -541,7 +540,6 @@
       <Filename Value="..\game\WorldParty"/>
     </Target>
     <SearchPaths>
-      <OtherUnitFiles Value="base;lua;media;menu;screens;lib\dglOpenGL;lib\SDL2;lib\portaudio;lib\ffmpeg;lib\SQLite;lib\other;lib\openCV;webSDK;webSDK\encrypt;$(LazarusDir)\components\lazutils;lib\freetype;lib\bass;lib\Lua;screens\controllers;screens\views;lib\pcre"/>
       <UnitOutputDirectory Value="..\build\fpc-$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
     <Parsing>
@@ -555,7 +553,7 @@
       <SmartLinkUnit Value="True"/>
       <Checks>
         <OverflowChecks Value="True"/>
-        <StackChecks Value="True"/>
+        <!-- <StackChecks Value="True"/> -->
       </Checks>
       <TargetCPU Value="i386"/>
     </CodeGeneration>
@@ -564,9 +562,15 @@
         <DebugInfoType Value="dsStabs"/>
       </Debugging>
       <LinkSmart Value="True"/>
+      <Options>
+        <Win32>
+          <GraphicApplication Value="True"/>
+        </Win32>
+      </Options>
     </Linking>
     <Other>
       <Verbosity>
+        <ShowWarn Value="False"/>
         <ShowNotes Value="False"/>
         <ShowHints Value="False"/>
       </Verbosity>
@@ -580,6 +584,12 @@
         <CompileReasons Compile="False" Build="False" Run="False"/>
       </ExecuteAfter>
     </Other>
-    <CompileReasons Run="False"/>
   </CompilerOptions>
+  <Debugging>
+    <Exceptions Count="1">
+      <Item1>
+        <Name Value="EWORLDPARTYParseException"/>
+      </Item1>
+    </Exceptions>
+  </Debugging>
 </CONFIG>
