--- a/installer/settings/settings.ini
+++ b/installer/settings/settings.ini
@@ -8,7 +8,7 @@ Left=1
 Top=1
 Right=300
 Bottom=140
-Text=UltraStar Deluxe Configuration (optional) 
+Text=UltraStar Deluxe WorldParty Configuration (optional) 
 
 [Field 1]
 Type=Label
@@ -53,7 +53,7 @@ Bottom=39
 
 [Field 6]
 Type=DropList
-ListItems=Catalan|Chinese|Croatian|Czech|Danish|Dutch|English|Euskara|Finnish|French|Scottish Gaelic|Galician|German|Greek|Hungarian|Icelandic|Italian|Japanese|Luxembourgish|Norwegian|Polish|Portuguese|Serbian|Slovak|Slovenian|Spanish|Swedish
+ListItems=Catalan|Chinese|Croatian|Czech|Danish|Dutch|English|Euskara|Finnish|French|Scottish Gaelic|Galician|German|Greek|Hungarian|Icelandic|Italian|Japanese|Lithuanian|Luxembourgish|Norwegian|Polish|Portuguese|Serbian|Slovak|Slovenian|Spanish|Swedish
 State=English
 Left=62
 Right=152
@@ -158,4 +158,4 @@ Left=158
 Top=119
 Right=295
 Bottom=134
-Text=Choose additional song directory for UltraStar Deluxe.
+Text=Choose additional song directory for UltraStar Deluxe WorldParty.
