--- a/src/config.inc.in
+++ b/src/config.inc.in
@@ -34,6 +34,7 @@
   LUA_VERSION_MINOR   = '@lua_VERSION_MINOR@';
   LUA_VERSION_MAJOR   = '@lua_VERSION_MAJOR@';
   LUA_VERSION         = '@lua_VERSION@';
+  LUA_INTEGER_BITS    = @LUA_INTEGER_BITS@;
 {$IFEND}
 
 {$@DEFINE_HAVE_FFMPEG@ HaveFFmpeg}
@@ -98,12 +99,6 @@
   PORTAUDIO_VERSION_MAJOR   = @portaudio_VERSION_MAJOR@;
   PORTAUDIO_VERSION_MINOR   = @portaudio_VERSION_MINOR@;
   PORTAUDIO_VERSION_RELEASE = @portaudio_VERSION_RELEASE@;
-{$IFEND}
-
-{$@DEFINE_HAVE_LIBPCRE@ HaveLibPcre}
-{$IF Defined(HaveLibPcre) and Defined(IncludeConstants)}
-  LIBPCRE_LIBNAME  = '@libpcre_LIBNAME@';
-  LIBPCRE_LIBDIR   = '@libpcre_LIBDIR@';
 {$IFEND}
 
 {$@DEFINE_HAVE_PORTMIXER@ HavePortmixer}
