--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,8 +1,8 @@
 
 #    UltraStar Deluxe WorldParty - Karaoke Game
-#	
-#	UltraStar Deluxe WorldParty is the legal property of its developers, 
-#	whose names	are too numerous to list here. Please refer to the 
+#
+#	UltraStar Deluxe WorldParty is the legal property of its developers,
+#	whose names	are too numerous to list here. Please refer to the
 #	COPYRIGHT file distributed with this source distribution.
 #
 #   This program is free software: you can redistribute it and/or modify
@@ -16,7 +16,7 @@
 #    GNU General Public License for more details.
 #
 #    You should have received a copy of the GNU General Public License
-#    along with this program. Check "LICENSE" file. If not, see 
+#    along with this program. Check "LICENSE" file. If not, see
 #	<http://www.gnu.org/licenses/>.
 #
 
@@ -101,7 +101,7 @@ PINC_FLAGS := -Fi$(USDXWP_LIB_DIR)/JEDI-SDL/SDL/Pas
 # Defined on debug mode
 ENABLE_DEBUG := @ENABLE_DEBUG@
 
-# Note: 
+# Note:
 #   - PFLAGS/PFLAGS_* defaults to $(PFLAGS_XYZ_DEFAULT) if not set by the user
 #   - if PFLAGS is defined, PFLAGS_* will be ignored on "make all"
 PFLAGS         ?= @PFLAGS@
@@ -112,7 +112,7 @@ PFLAGS_RELEASE ?= @PFLAGS_RELEASE@
 # Do not overwrite, just add extra flags
 PFLAGS_EXTRA   += @PFLAGS_EXTRA@
 
-# Default PFLAGS, used if PFLAGS/PFLAGS_* was not set by the user 
+# Default PFLAGS, used if PFLAGS/PFLAGS_* was not set by the user
 # - Do not use -dDEBUG because it will enable unwanted features
 # - Do not strip executable (-Xs, set by fpc.cfg) to be GNU make conformant
 # - Use DEBUG_MODE instead of DEBUG to avoid enabling the fpc.cfg DEBUG preset
@@ -120,9 +120,9 @@ PFLAGS_EXTRA   += @PFLAGS_EXTRA@
 # - Note that fpc.cfg already defines -vinw, so add -v0 first
 # - The stack check (-Ct) might not work with enabled threading
 # - Do we need -Coi?
-PFLAGS_BASE_DEFAULT    := -Si -Sg- -Sc- -v0Binwe
-PFLAGS_DEBUG_DEFAULT   := -Xs- -g -gl -dDEBUG_MODE
-PFLAGS_RELEASE_DEFAULT := -Xs- -O2
+PFLAGS_BASE_DEFAULT    := -Si -Sg -Sc -v0Binwe
+PFLAGS_DEBUG_DEFAULT   := -Xs -g -gl -dDEBUG_MODE
+PFLAGS_RELEASE_DEFAULT := -Xs -O4
 PFLAGS_EXTRA_DEFAULT   :=
 
 # Debug/Release mode flags
@@ -174,7 +174,7 @@ USE_PROJECTM_CWRAPPER := @USE_PROJECTM_CWRAPPER@
 # Static libs
 #################################################
 
-STATIC_LIBS := 
+STATIC_LIBS :=
 ifeq ($(USE_PROJECTM_CWRAPPER), yes)
 STATIC_LIBS += $(PROJECTM_CWRAPPER_LIB)
 endif
@@ -187,7 +187,7 @@ endif
 all: build
 
 # One shot debug build (always rebuild)
-# Note: we cannot set PFLAGS and call build directly, 
+# Note: we cannot set PFLAGS and call build directly,
 #  as target specific flags are not passed at recursive
 #  make calls. So call debug-build first.
 .PHONY: debug debug-build
@@ -198,7 +198,7 @@ debug-build: PFLAGS := $(PFLAGS_DEBUG_ALL)
 debug-build: build
 
 # One shot release build (always rebuild)
-# Note: we cannot set PFLAGS and call build directly, 
+# Note: we cannot set PFLAGS and call build directly,
 #  as target specific flags are not passed at recursive
 #  make calls. So call release-build first.
 .PHONY: release release-build
@@ -214,8 +214,8 @@ rebuild: clean_obj
 	$(MAKE) build
 
 # Build if files changed. Always clean old data before compiling.
-# FPC does not reliably recognize changes, neither in .pas, 
-# .inc-files nor static libs (.a/.o). This might result in corrupted 
+# FPC does not reliably recognize changes, neither in .pas,
+# .inc-files nor static libs (.a/.o). This might result in corrupted
 # builds and renders debugging difficult (because FPC uses outdated
 # .ppu/.o data of files that have been changed).
 .PHONY: build
@@ -229,7 +229,7 @@ SRC_FILES = $(shell find $(srcdir) -name "*.inc" -o -name "*.pas" -o -name "*.pp
 
 # To conform to the GNU Coding Standards, INSTALL_DATADIR is
 # not hardcoded so $prefix and $datadir can be changed at any
-# execution of this Makefile. 
+# execution of this Makefile.
 # Paths cannot be passed to fpc via -d as with gcc's -D parameter.
 # We use an intermediate file instead.
 #
