--- a/installer/settings/settings.ini
+++ b/installer/settings/settings.ini
@@ -2,13 +2,6 @@
 NumFields=19
 
 ; Background Group of Settings Box
-[Field 17]
-Type=GroupBox
-Left=1
-Top=1
-Right=300
-Bottom=140
-Text=UltraStar Deluxe WorldParty Configuration (optional) 
 
 [Field 1]
 Type=Label
@@ -62,8 +55,8 @@ Bottom=56
 
 [Field 7]
 Type=DropList
-ListItems=320x200|640x480|800x600|1024x768|1280x1024|1440x900|1680x1050|1920x1200
-State=800x600
+ListItems=320x200|640x480|800x600|1024x768|1280x720|1280x1024|1440x900|1680x1050|1920x1080|1920x1200
+State=1280x720
 Left=62
 Right=152
 Top=62
@@ -142,6 +135,14 @@ Top=98
 Right=300
 Bottom=115
 Text=Select criterion to sort songs.
+
+[Field 17]
+Type=GroupBox
+Left=1
+Top=1
+Right=300
+Bottom=140
+Text=UltraStar Deluxe WorldParty Configuration (optional) 
 
 [Field 18]
 Type=DirRequest
