--- a/game/fonts/fonts.ini
+++ b/game/fonts/fonts.ini
@@ -68,5 +68,5 @@ PreCache=0
 Outline=0.02
 
 [Fallbacks]
-File1=wqy-microhei/wqy-microhei.ttc
+File1=Roboto/Roboto-Regular.ttf
 ;File2=C:/Windows/Fonts/simsun.ttc
