--- a/game/themes/Fantasy/Static Violet.ini
+++ b/game/themes/Fantasy/Static Violet.ini
@@ -37,7 +37,8 @@ icon_song_search = [icon]song_search.png
 icon_song_video  = [icon]song_video.png
 icon_song_medley = [icon]song_medley.png
 icon_song_calcmedley = [icon]song_calcmedley.png
-icon_song_duet = [icon]song_duet.png
+icon_song_duet 	 = [icon]song_duet.png
+icon_song_rap 	 = [icon]song_rap.png
 
 loadicon = [load]logo.png
 loadbaricon = [load]bar.png
@@ -104,7 +105,7 @@ SongDuetSinger3 = [song]duetsinger3.png
 # # # S I N G # # #
 #the bar where the lyrics reside
 LyricBar       = [sing]textBar.png
-LyricBarDuet   = [sing]textBarDuet.png
+LyricBarDuet   = [sing]textBar.png
 
 #this one slides in, to tell you that singing starts immediately
 LyricHelpBar   = [sing]lyricsHelpBar.png
@@ -169,9 +170,6 @@ PlayerIDBox04 = [sing.player4]lyric_active.png
 PlayerIDBox05 = [sing.player5]lyric_active.png
 PlayerIDBox06 = [sing.player6]lyric_active.png
 
-# these icons are part of the tango icon set
-# licensed under Creative Commons Attribution Share-Alike license
-# http://tango.freedesktop.org
 Rating_0 = [score]rating_0.png
 Rating_1 = [score]rating_1.png
 Rating_2 = [score]rating_2.png
@@ -267,6 +265,15 @@ NoteBGMid      = [sing]notesBgMid.png
 NoteBGRight    = [sing]notesBgRight.png
 Pause          = [sing]pause.png
 
+GrayLeftRap       = [rap]notesLeft.png
+GrayMidRap        = [rap]notesMid.png
+GrayRightRap      = [rap]notesRight.png
+NotePlainLeftRap  = [rap]notesPlainLeft.png
+NotePlainMidRap   = [rap]notesPlainMid.png
+NotePlainRightRap = [rap]notesPlainRight.png
+NoteBGLeftRap     = [rap]notesBgLeft.png
+NoteBGMidRap      = [rap]notesBgMid.png
+NoteBGRightRap    = [rap]notesBgRight.png
 
 # # # E F F E C T S # # #
 NoteStar        = [effect]goldenNoteStar.png
@@ -319,6 +326,7 @@ JukeboxSongMenuPlayPause = [jukebox]songmenuplaypause.png
 JukeboxSongMenuNext = [jukebox]songmenunext.png
 JukeboxSongMenuPrevious = [jukebox]songmenuprevious.png
 JukeboxSongMenuPlaylist = [jukebox]songmenuplaylist.png
+JukeboxSongSelection = [jukebox]songSelection.png
 JukeboxField = [jukebox]fieldbg.png
 JukeboxButton = [jukebox]mainBar.png
 JukeboxSelect = [jukebox]selectbg.png
@@ -355,17 +363,11 @@ NoAvatar_P3  = [name]noavatarP3.png
 NoAvatar_P4  = [name]noavatarP4.png
 NoAvatar_P5  = [name]noavatarP5.png
 NoAvatar_P6  = [name]noavatarP6.png
-NoAvatar_P7  = [name]noavatarP1.png
-NoAvatar_P8  = [name]noavatarP2.png
-NoAvatar_P9  = [name]noavatarP3.png
-NoAvatar_P10  = [name]noavatarP4.png
-NoAvatar_P11  = [name]noavatarP5.png
-NoAvatar_P12  = [name]noavatarP6.png
 
 # # # A B O U T # # #
 LogoWeb = [About]logo_web.png
 LogoDeluxe = [About]logo_deluxe.png
-helperbg = [About]helperbg.png
+AboutBG = [About]helperbg2.png
 
 # # # D E V E L O P E R S # # #
 Dhelperbg = [Developers]helperbg.png
