Checking version part 1

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -20802,7 +20802,7 @@ Reflection = 1
 ReflectionSpacing = 2
 
 [AboutMain]
-Texts = 2
+Texts = 3
 
 [AboutMainBackground]
 Tex = MainBG
@@ -20888,6 +20888,15 @@ Align = 1
 Text = US_VERSION
 Reflection = 0
 ReflectionSpacing = 13
+
+[AboutMainVChecking]
+X = 350
+Y = 555
+Color = White
+Font = 0
+Size = 20
+Align = 1
+Text =
 
 [Developers]
 Texts = 1
