Update theme in profile screen

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -381,174 +381,174 @@ STColor = White
 STDColor = GrayDark
 
 [NamePlayerSelectStatic1]
-X = 102
-Y = 128
-W = 68
-H = 80
+X = 101
+Y = 122
+W = 66
+H = 86
 Tex = AvatarFrame2
 Color = P1Dark
 Type = Colorized
 Z = 1
 
 [NamePlayerSelectStatic1Text]
-X = 135
-Y = 209
+X = 133
+Y = 211
 Font = 1
-Size = 17
+Size = 16
 Align = 1
 Color = White
 Z = 1
 
 [NamePlayerSelectStatic1Avatar]
-X = 110
-Y = 135
-W = 52
-H = 65
+X = 108
+Y = 129
+W = 51
+H = 70
 Z = 1
 Tex = NoAvatar_P1
 Type = Transparent
 
 [NamePlayerSelectStatic2]
 X = 202
-Y = 128
-W = 68
-H = 80
+Y = 122
+W = 66
+H = 86
 Tex = AvatarFrame2
 Color = P2Dark
 Type = Colorized
 Z = 1
 
 [NamePlayerSelectStatic2Text]
-X = 241
-Y = 209
+X = 235
+Y = 211
 Font = 1
-Size = 17
+Size = 16
 Align = 1
 Color = White
 Text = P2
 Z = 1
 
 [NamePlayerSelectStatic2Avatar]
-X = 210
-Y = 135
-W = 52
-H = 65
+X = 209
+Y = 129
+W = 51
+H = 70
 Z = 1
 Tex = NoAvatar_P2
 Type = Transparent
 
 [NamePlayerSelectStatic3]
 X = 312
-Y = 128
-W = 68
-H = 80
+Y = 122
+W = 66
+H = 86
 Tex = AvatarFrame2
 Color = P3Dark
 Type = Colorized
 Z = 1
 
 [NamePlayerSelectStatic3Text]
-X = 347
-Y = 209
+X = 344
+Y = 211
 Font = 1
-Size = 17
+Size = 16
 Align = 1
 Color = White
 Text = P3
 Z = 1
 
 [NamePlayerSelectStatic3Avatar]
-X = 320
-Y = 135
-W = 52
-H = 65
+X = 319
+Y = 129
+W = 51
+H = 70
 Z = 1
 Tex = NoAvatar_P3
 Type = Transparent
 
 [NamePlayerSelectStatic4]
 X = 418
-Y = 128
-W = 68
-H = 80
+Y = 122
+W = 66
+H = 86
 Tex = AvatarFrame2
 Color = P4Dark
 Type = Colorized
 Z = 1
 
 [NamePlayerSelectStatic4Text]
-X = 453
-Y = 209
+X = 451
+Y = 211
 Font = 1
-Size = 17
+Size = 16
 Align = 1
 Color = White
 Text = P4
 Z = 1
 
 [NamePlayerSelectStatic4Avatar]
-X = 426
-Y = 135
-W = 52
-H = 65
+X = 425
+Y = 129
+W = 51
+H = 70
 Z = 1
 Tex = NoAvatar_P4
 Type = Transparent
 
 [NamePlayerSelectStatic5]
 X = 524
-Y = 128
-W = 68
-H = 80
+Y = 122
+W = 66
+H = 86
 Tex = AvatarFrame2
 Color = P5Dark
 Type = Colorized
 Z = 1
 
 [NamePlayerSelectStatic5Text]
-X = 559
-Y = 209
+X = 557
+Y = 211
 Font = 1
-Size = 17
+Size = 16
 Align = 1
 Color = White
 Text = P5
 Z = 1
 
 [NamePlayerSelectStatic5Avatar]
-X = 532
-Y = 135
-W = 52
-H = 65
+X = 531
+Y = 129
+W = 51
+H = 70
 Z = 1
 Tex = NoAvatar_P5
 Type = Transparent
 
 [NamePlayerSelectStatic6]
 X = 630
-Y = 128
-W = 68
-H = 80
+Y = 122
+W = 66
+H = 86
 Tex = AvatarFrame2
 Color = P6Dark
 Type = Colorized
 Z = 1
 
 [NamePlayerSelectStatic6Text]
-X = 665
-Y = 209
+X = 662
+Y = 211
 Font = 1
-Size = 17
+Size = 16
 Align = 1
 Color = White
 Text = P6
 Z = 1
 
 [NamePlayerSelectStatic6Avatar]
-X = 638
-Y = 135
-W = 52
-H = 65
+X = 637
+Y = 129
+W = 51
+H = 70
 Z = 1
 Tex = NoAvatar_P6
 Type = Transparent
@@ -728,28 +728,28 @@ Tex = NoAvatar
 Type = Transparent
 
 [NamePlayerSelectCurrent]
-X = -12
-Y = 120
-W = 95
-H = 120
+X = 0
+Y = 235
+W = 67
+H = 7
 Z = 0.95
 Tex = SelectFrame
 Color = ColorDark
-DColor = ColorLight
+DColor = White
 Type = Transparent
 
 [NamePlayerAvatar]
 X = 560
-Y = 420
-W = 70
+Y = 421
+W = 68
 H = 90
 Reflection = 0
 
 [NamePlayerButtonAvatar]
 X = 541
-Y = 405
-W = 111
-H = 122
+Y = 403
+W = 109
+H = 124
 Tex = AvatarFrame
 Color = ColorDark
 DColor = ColorLight
