--- a/game/fonts/fonts.ini
+++ b/game/fonts/fonts.ini
@@ -44,8 +44,8 @@
 
 [Font_Normal]
 File=Roboto/Roboto-Regular.ttf
-;GlyphSpacing=0.2
-Stretch=0.81
+GlyphSpacing=1.1
+Stretch=0.8
 
 [Font_Bold]
 File=Roboto/Roboto-Bold.ttf
@@ -53,20 +53,16 @@ File=Roboto/Roboto-Bold.ttf
 
 [Font_Outline1]
 File=Roboto/Roboto-Bold.ttf
-Outline=0.05
-Stretch=0.86
+Outline=0.06
+Stretch=0.8
 
 [Font_Outline2]
 File=Roboto/Roboto-Bold.ttf
-Outline=0.08
-Stretch=0.89
+Outline=0.09
+Stretch=0.8
 
 [Font_BoldHighRes]
 File=Roboto/Roboto-Bold.ttf
 MaxResolution=256
 PreCache=0
 Outline=0.02
-
-[Fallbacks]
-File1=Roboto/Roboto-Regular.ttf
-;File2=C:/Windows/Fonts/simsun.ttc
