--- a/src/WorldParty for Windows.lpi
+++ b/src/WorldParty for Windows.lpi
@@ -266,7 +266,7 @@
         <IsPartOfProject Value="True"/>
       </Unit58>
       <Unit59>
-        <Filename Value="screens\UScreenName.pas"/>
+        <Filename Value="screens\UScreenPlayerSelection.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit59>
       <Unit60>
