Patch for loading songs in new theme

--- a/game/themes/Party.ini
+++ b/game/themes/Party.ini
@@ -60,6 +60,15 @@ ReflectionSpacing = 13
 [MainBackground]
 Tex = MainBG
 
+[MainTextDescriptionLong]
+X = 385
+Y = 550
+Color = White
+Font = 0
+Size = 0
+Align = 1
+Text =
+
 [MainButtonSolo]
 X = 25
 Y = 95
@@ -136,7 +145,7 @@ FadeTexPos = 0
 X = 220
 Y = 40
 Font = 0
-Size = 30
+Size = 33
 Align = 1
 Text = SING_JUKEBOX_DESC
 Color = White
@@ -241,7 +250,7 @@ FadeTex = ButtonFade
 FadeTexPos = 0
 
 [MainButtonAboutText1]
-X = 19
+X = 20
 Y = 50
 Font = 0
 Size = 18
@@ -249,27 +258,10 @@ Align = 1
 Text = SING_ABOUT
 Color = White
 
-[MainStatic1]
-Tex = ProgressBar
-X = 130
-Y = 35
-W = 500
-H = 3
-Z = 1
-Color = Gray
-Type = Transparent
-
-[MainProgressSong]
-Tex = ProgressBar
-X = 130
-Y = 35
-W = 500
-H = 3
-Color = ColorDark
 
 [MainProgressSongsText]
 X = 380
-Y = 10
+Y = 15
 Color = White
 Font = 0
 Size = 17
