--- a/game/themes/common/Basic Blue.ini
+++ b/game/themes/common/Basic Blue.ini
@@ -9,13 +9,11 @@
 #  under Creative Common license  #
 ###################################
 
-#Video credits to: AA VFX https://www.youtube.com/watch?v=X36DOTEzjHw
-
 ###############
 [Skin]
-Theme=Fantasy
-Name= Magma
-Color=Red
+Theme=Party
+Name= Basic Blue
+Color=Blue
 
 [Textures]
 /**
@@ -63,13 +61,13 @@ Select_ArrowRight = [interface]select_arrow_right.png
 
 #Backgrounds
 LoadingBG      = [bg-load]basic.jpg
-TitleBG	       = [bg-main]magma.webm
-MainBG         = [bg-main]magma.webm
-SongBG         = [bg-main]magma.webm
-ScoreScreenBG  = [bg-main]magma.webm
-Top5BG         = [bg-main]magma.webm
-OptionsBG      = [bg-main]magma.webm
-PartyBG        = [bg-main]magma.webm
+TitleBG	       = [bg-main]blue.jpg
+MainBG         = [bg-main]blue.jpg
+SongBG         = [bg-main]blue.jpg
+ScoreScreenBG  = [bg-main]blue.jpg
+Top5BG         = [bg-main]blue.jpg
+OptionsBG      = [bg-main]blue.jpg
+PartyBG        = [bg-main]blue.jpg
 
 # # # S O N G S E L E C E T # # #
 SongSelection1up = [main]songSelection1up.png
