--- a/game/themes/common/Static Blue.ini
+++ b/game/themes/common/Static Blue.ini
@@ -1,12 +1,11 @@
-
 ###################################
 # theme developed by Daniel20     #
-# for http:\\ultrastar-es.org	  #
+# for https:\\ultrastar-es.org    #
 # visit us to get songs, plugins, #
-# themes and more...		      #
-#								  #
-# *some icons belongs to 		  #
-#  http://www.iconfinder.com/	  #
+# themes and more...              #
+#                                 #
+# *some icons belongs to          #
+#  https://www.iconfinder.com/    #
 #  under Creative Common license  #
 ###################################
 
@@ -37,7 +36,8 @@ icon_song_search = [icon]song_search.png
 icon_song_video  = [icon]song_video.png
 icon_song_medley = [icon]song_medley.png
 icon_song_calcmedley = [icon]song_calcmedley.png
-icon_song_duet = [icon]song_duet.png
+icon_song_duet 	 = [icon]song_duet.png
+icon_song_rap 	 = [icon]song_rap.png
 
 loadicon = [load]logo.png
 loadbaricon = [load]bar.png
@@ -69,21 +69,6 @@ Top5BG         = [bg-main]blue.jpg
 OptionsBG      = [bg-main]blue.jpg
 PartyBG        = [bg-main]blue.jpg
 
-#Icons on screen
-SongCD         = [icon]cd.png
-MainIcon       = [main]buttonsolo.png
-MainSearch     = [icon]search.png
-IconOption     = [main]buttonoption.png
-IconSongMenu   = [icon]songmenu.png
-ScoreIcon      = [icon]score.png
-PartyIcon      = [main]buttonparty.png
-StatIcon       = [main]buttonstats.png
-VideoIcon      = [icon]video.png
-
-IconError      = [icon]error.png
-IconQuestion   = [icon]question.png
-
-
 # # # S O N G S E L E C E T # # #
 SongSelection1up = [main]songSelection1up.png
 SongSelection1dn = [main]songSelection1dn.png
@@ -92,7 +77,7 @@ SongSelection2 = [main]songSelection2.png
 SongSelection3 = [main]songSelection3.png
 SongSelection4 = [main]songSelection4.png
 SongSelection5 = [main]songSelection5.png
-SongCover      = [main]songCover.jpg
+SongCover      = ../../covers/Common/NoCover.jpg
 SongMessage    = [song]message.png
 SongDuetSinger = [song]duetsinger.png
 SongDuetSinger2 = [song]duetsinger2.png
@@ -101,7 +86,7 @@ SongDuetSinger3 = [song]duetsinger3.png
 # # # S I N G # # #
 #the bar where the lyrics reside
 LyricBar       = [sing]textBar.png
-LyricBarDuet   = [sing]textBarDuet.png
+LyricBarDuet   = [sing]textBar.png
 
 #this one slides in, to tell you that singing starts immediately
 LyricHelpBar   = [sing]lyricsHelpBar.png
@@ -166,9 +151,6 @@ PlayerIDBox04 = [sing.player4]lyric_active.png
 PlayerIDBox05 = [sing.player5]lyric_active.png
 PlayerIDBox06 = [sing.player6]lyric_active.png
 
-# these icons are part of the tango icon set
-# licensed under Creative Commons Attribution Share-Alike license
-# http://tango.freedesktop.org
 Rating_0 = [score]rating_0.png
 Rating_1 = [score]rating_1.png
 Rating_2 = [score]rating_2.png
@@ -264,6 +246,15 @@ NoteBGMid      = [sing]notesBgMid.png
 NoteBGRight    = [sing]notesBgRight.png
 Pause          = [sing]pause.png
 
+GrayLeftRap       = [rap]notesLeft.png
+GrayMidRap        = [rap]notesMid.png
+GrayRightRap      = [rap]notesRight.png
+NotePlainLeftRap  = [rap]notesPlainLeft.png
+NotePlainMidRap   = [rap]notesPlainMid.png
+NotePlainRightRap = [rap]notesPlainRight.png
+NoteBGLeftRap     = [rap]notesBgLeft.png
+NoteBGMidRap      = [rap]notesBgMid.png
+NoteBGRightRap    = [rap]notesBgRight.png
 
 # # # E F F E C T S # # #
 NoteStar        = [effect]goldenNoteStar.png
@@ -316,6 +307,7 @@ JukeboxSongMenuPlayPause = [jukebox]songmenuplaypause.png
 JukeboxSongMenuNext = [jukebox]songmenunext.png
 JukeboxSongMenuPrevious = [jukebox]songmenuprevious.png
 JukeboxSongMenuPlaylist = [jukebox]songmenuplaylist.png
+JukeboxSongSelection = [jukebox]songSelection.png
 JukeboxField = [jukebox]fieldbg.png
 JukeboxButton = [jukebox]mainBar.png
 JukeboxSelect = [jukebox]selectbg.png
@@ -336,23 +328,17 @@ SelectFrame = [name]select.png
 AvatarFrame2 = [score]frame.png
 
 # # # NO AVATARS # # #
-NoAvatar_P1  = [name]noavatarP1.png
-NoAvatar_P2  = [name]noavatarP2.png
-NoAvatar_P3  = [name]noavatarP3.png
-NoAvatar_P4  = [name]noavatarP4.png
-NoAvatar_P5  = [name]noavatarP5.png
-NoAvatar_P6  = [name]noavatarP6.png
-NoAvatar_P7  = [name]noavatarP1.png
-NoAvatar_P8  = [name]noavatarP2.png
-NoAvatar_P9  = [name]noavatarP3.png
-NoAvatar_P10  = [name]noavatarP4.png
-NoAvatar_P11  = [name]noavatarP5.png
-NoAvatar_P12  = [name]noavatarP6.png
+NoAvatar_P1  = [name]noavatar.png
+NoAvatar_P2  = [name]noavatar.png
+NoAvatar_P3  = [name]noavatar.png
+NoAvatar_P4  = [name]noavatar.png
+NoAvatar_P5  = [name]noavatar.png
+NoAvatar_P6  = [name]noavatar.png
 
 # # # A B O U T # # #
 LogoWeb = [About]logo_web.png
 LogoDeluxe = [About]logo_deluxe.png
-helperbg = [About]helperbg.png
+AboutBG = [About]helperbg2.png
 
 # # # D E V E L O P E R S # # #
 Dhelperbg = [Developers]helperbg.png
