--- a/game/themes/common/Static Violet.ini
+++ b/game/themes/common/Static Violet.ini
@@ -1,12 +1,11 @@
-
 ###################################
 # theme developed by Daniel20     #
-# for http:\\ultrastar-es.org	  #
+# for https:\\ultrastar-es.org    #
 # visit us to get songs, plugins, #
-# themes and more...		      #
-#								  #
-# *some icons belongs to 		  #
-#  http://www.iconfinder.com/	  #
+# themes and more...              #
+#                                 #
+# *some icons belongs to          #
+#  https://www.iconfinder.com/    #
 #  under Creative Common license  #
 ###################################
 
@@ -78,7 +77,7 @@ SongSelection2 = [main]songSelection2.png
 SongSelection3 = [main]songSelection3.png
 SongSelection4 = [main]songSelection4.png
 SongSelection5 = [main]songSelection5.png
-SongCover      = [main]songCover.jpg
+SongCover      = ../../covers/Common/NoCover.jpg
 SongMessage    = [song]message.png
 SongDuetSinger = [song]duetsinger.png
 SongDuetSinger2 = [song]duetsinger2.png
@@ -329,12 +328,12 @@ SelectFrame = [name]select.png
 AvatarFrame2 = [score]frame.png
 
 # # # NO AVATARS # # #
-NoAvatar_P1  = [name]noavatarP1.png
-NoAvatar_P2  = [name]noavatarP2.png
-NoAvatar_P3  = [name]noavatarP3.png
-NoAvatar_P4  = [name]noavatarP4.png
-NoAvatar_P5  = [name]noavatarP5.png
-NoAvatar_P6  = [name]noavatarP6.png
+NoAvatar_P1  = [name]noavatar.png
+NoAvatar_P2  = [name]noavatar.png
+NoAvatar_P3  = [name]noavatar.png
+NoAvatar_P4  = [name]noavatar.png
+NoAvatar_P5  = [name]noavatar.png
+NoAvatar_P6  = [name]noavatar.png
 
 # # # A B O U T # # #
 LogoWeb = [About]logo_web.png
