--- a/game/themes/common/Universe.ini
+++ b/game/themes/common/Universe.ini
@@ -9,13 +9,13 @@
 #  under Creative Common license  #
 ###################################
 
-#Video credits to: AA VFX https://www.youtube.com/watch?v=X36DOTEzjHw
+#Video credits to: AA VFX https://www.youtube.com/watch?v=S3La-3bUjXk
 
 ###############
 [Skin]
-Theme=Fantasy
-Name= Magma
-Color=Red
+Theme=Party
+Name= Universe
+Color=Blue
 
 [Textures]
 /**
@@ -63,13 +63,13 @@ Select_ArrowRight = [interface]select_arrow_right.png
 
 #Backgrounds
 LoadingBG      = [bg-load]basic.jpg
-TitleBG	       = [bg-main]magma.webm
-MainBG         = [bg-main]magma.webm
-SongBG         = [bg-main]magma.webm
-ScoreScreenBG  = [bg-main]magma.webm
-Top5BG         = [bg-main]magma.webm
-OptionsBG      = [bg-main]magma.webm
-PartyBG        = [bg-main]magma.webm
+TitleBG	       = [bg-main]space.webm
+MainBG         = [bg-main]space.webm
+SongBG         = [bg-main]space.webm
+ScoreScreenBG  = [bg-main]space.webm
+Top5BG         = [bg-main]space.webm
+OptionsBG      = [bg-main]space.webm
+PartyBG        = [bg-main]space.webm
 
 # # # S O N G S E L E C E T # # #
 SongSelection1up = [main]songSelection1up.png
