--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -549,14 +549,14 @@ Type = Transparent
 [NamePlayerAvatar]
 X = 560
 Y = 421
-W = 68
+W = 67
 H = 90
 Reflection = 0
 
 [NamePlayerButtonAvatar]
 X = 541
 Y = 403
-W = 109
+W = 107
 H = 124
 Tex = AvatarFrame
 Color = ColorDark
@@ -17851,38 +17851,20 @@ Align = 0
 Text =
 
 [StatMainStatic1]
-X = 40
+X = 30
 Y = 100
-W = 520
-H = 20
-Tex = StatMainBG1
-Color = ColorLight
-Type = Colorized
-
-[StatMainStatic2]
-X = 40
-Y = 120
-W = 520
-H = 300
-Tex = StatMainBG2
+W = 530
+H = 340
+Tex = StatInfoBG1
 Color = ColorDark
 Type = Colorized
 
-[StatMainStatic3]
-X = 40
-Y = 420
-W = 520
-H = 20
-Tex = StatMainBG3
-Color = ColorLight
-Type = Colorized
-
 [StatMainText1]
-X = 70
-Y = 6
+X = 50
+Y = 25
 Color = White
 Font = 0
-Size = 60
+Size = 50
 Text = STAT_MAIN
 Align = 0
 
@@ -17978,17 +17960,17 @@ Text = SING_OPTIONS_EXIT
 Color = White
 
 [StatDetailTextDescription]
-X = 70
-Y = 53
+X = 50
+Y = 80
 Color = White
 Font = 0
-Size = 30
+Size = 25
 Align = 0
 Text =
 
 [StatDetailTextPage]
 X = 546
-Y = 98
+Y = 105
 Color = White
 Font = 0
 Size = 15
@@ -17996,80 +17978,80 @@ Align = 2
 Text =
 
 [StatDetailTextList1]
-X = 45
-Y = 122
+X = 50
+Y = 140
 Color = White
 Font = 0
 Size = 21
 Text = Stat1
 
 [StatDetailTextList2]
-X = 45
-Y = 160
+X = 50
+Y = 178
 Color = White
 Font = 0
 Size = 21
 Text = Stat2
 
 [StatDetailTextList3]
-X = 45
-Y = 198
+X = 50
+Y = 216
 Color = White
 Font = 0
 Size = 21
 Text =
 
 [StatDetailTextList4]
-X = 45
-Y = 236
+X = 50
+Y = 254
 Color = White
 Font = 0
 Size = 21
 Text =
 
 [StatDetailTextList5]
-X = 45
-Y = 274
+X = 50
+Y = 292
 Color = White
 Font = 0
 Size = 21
 Text =
 
 [StatDetailTextList6]
-X = 45
-Y = 312
+X = 50
+Y = 330
 Color = White
 Font = 0
 Size = 21
 Text =
 
 [StatDetailTextList7]
-X = 45
-Y = 350
+X = 50
+Y = 368
 Color = White
 Font = 0
 Size = 21
 Text =
 
 [StatDetailTextList8]
-X = 45
-Y = 388
+X = 50
+Y = 406
 Color = White
 Font = 0
 Size = 21
 Text =
 
 [StatDetailTextList9]
-X = 45
-Y = 426
+X = 50
+Y = 444
 Color = White
 Font = 0
 Size = 21
 Text =
 
 [StatDetailTextList10]
-X = 45
-Y = 464
+X = 50
+Y = 482
 Color = White
 Font = 0
 Size = 21
@@ -18077,46 +18059,20 @@ Text =
 
 [StatDetailStatic1]
 X = 40
-Y = 22
-W = 27
-H = 27
-Color = White
-Tex = StatIcon
-Type = Colorized
-
-[StatDetailStatic1]
-X = 40
 Y = 100
 W = 520
-H = 24
-Tex = StatDetailBG1
+H = 440
+Tex = StatInfoBG2
 Color = ColorLight
 Type = Colorized
 
-[StatDetailStatic2]
-X = 40
-Y = 124
-W = 520
-H = 376
-Tex = StatMainBG2
-Color = ColorDark
-Type = Colorized
-
-[StatDetailStatic3]
-X = 40
-Y = 500
-W = 520
-H = 20
-Tex = StatMainBG3
-Color = ColorLight
-Type = Colorized
 
 [StatDetailText1]
-X = 70
-Y = 6
+X = 50
+Y = 25
 Color = White
 Font = 0
-Size = 60
+Size = 50
 Text = STAT_DETAIL
 Align = 0
 
