--- a/game/themes/common/Magma.ini
+++ b/game/themes/common/Magma.ini
@@ -200,11 +200,8 @@ PartyTrophy			=[tournament]trophy.png
 PartyWinner			=[tournament]winner.png
 
 # # # S T A T S # # #
-StatMainBG1 = [stat]mainBG1.png
-StatMainBG2 = [stat]mainBG2.png
-StatMainBG3 = [stat]mainBG3.png
-StatDetailBG1 = [stat]detailBG1.png
-
+StatInfoBG1 = [stat]InfoBG1.png
+StatInfoBG2 = [stat]InfoBG2.png
 
 # # # N A V I # # #
 ButtonP     = [button]p.png
