Renamed record screen

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -18220,12 +18220,12 @@ Align = 1
 Text = SING_OPTIONS_THEMES
 Color = White
 
-[OptionsButtonRecord]
+[OptionsButtonMicrophones]
 X = 265
 Y = 270
 W = 73
 H = 75
-Tex = Optionsbuttonrecord
+Tex = Optionsbuttonmicrophones
 Color = White
 DColor = White
 Type = Transparent
@@ -18237,13 +18237,13 @@ SelectH = 65
 FadeTex = ButtonFade
 FadeTexPos = 0
 
-[OptionsButtonRecordText1]
+[OptionsButtonMicrophonesText1]
 X = 40
 Y = 80
 Font = 0
 Size = 26
 Align = 1
-Text = SING_OPTIONS_RECORD
+Text = SING_OPTIONS_MICROPHONES
 Color = White
 Texts = 1
 
@@ -19146,30 +19146,30 @@ Type = Transparent
 Reflection = 1
 ReflectionSpacing = 2
 
-[OptionsRecord]
+[OptionsMicrophones]
 Texts = 5
 
-[OptionsRecordBackground]
+[OptionsMicrophonesBackground]
 Tex = OptionsBG
 
-[OptionsRecordStatic1]
+[OptionsMicrophonesStatic1]
 X = 30
 Y = 30
 W = 70
 H = 65
 Color = White
-Tex = Optionsbuttonrecord
+Tex = Optionsbuttonmicrophones
 Type = Transparent
 
-[OptionsRecordText1]
+[OptionsMicrophonesText1]
 X = 110
 Y = 40
 Color = White
 Size = 45
-Text = SING_OPTIONS_RECORD
+Text = SING_OPTIONS_MICROPHONES
 
-[OptionsRecordSelectSlideCard]
-Text = SING_OPTIONS_RECORD_CARD
+[OptionsMicrophonesSelectSlideCard]
+Text = SING_OPTIONS_MICROPHONES_CARD
 Tex = MainBar
 Type = Transparent
 TexSBG = SelectBG
@@ -19189,8 +19189,8 @@ SBGDColor = Gray
 STColor = White
 STDColor = GrayDark
 
-[OptionsRecordSelectSlideInput]
-Text = SING_OPTIONS_RECORD_INPUT
+[OptionsMicrophonesSelectSlideInput]
+Text = SING_OPTIONS_MICROPHONES_INPUT
 Tex = MainBar
 Type = Transparent
 TexSBG = SelectBG
@@ -19210,8 +19210,8 @@ SBGDColor = Gray
 STColor = White
 STDColor = GrayDark
 
-[OptionsRecordSelectSlideChannel]
-Text = SING_OPTIONS_RECORD_CHANNEL
+[OptionsMicrophonesSelectSlideChannel]
+Text = SING_OPTIONS_MICROPHONES_CHANNEL
 Tex = MainBar
 Type = Transparent
 TexSBG = SelectBG
@@ -19231,12 +19231,12 @@ SBGDColor = Gray
 STColor = White
 STDColor = GrayDark
 
-[OptionsRecordSelectThreshold]
+[OptionsMicrophonesSelectThreshold]
 Tex = MainBar
 Type = Transparent
 TexSBG = SelectBG
 TypeSBG = Transparent
-Text = SING_OPTIONS_SOUND_THRESHOLD
+Text = SING_OPTIONS_MICROPHONES_THRESHOLD
 X = 70
 Y = 367
 W = 250
@@ -19252,12 +19252,12 @@ SBGDColor = Gray
 STColor = White
 STDColor = GrayDark
 
-[OptionsRecordSelectMicBoost]
+[OptionsMicrophonesSelectMicBoost]
 Tex = MainBar
 Type = Transparent
 TexSBG = SelectBG
 TypeSBG = Transparent
-Text = SING_OPTIONS_SOUND_MIC_BOOST
+Text = SING_OPTIONS_MICROPHONES_MIC_BOOST
 X = 70
 Y = 417
 W = 250
@@ -19273,7 +19273,7 @@ SBGDColor = Gray
 STColor = White
 STDColor = GrayDark
 
-[OptionsRecordButtonExit]
+[OptionsMicrophonesButtonExit]
 X = 70
 Y = 470
 W = 250
