Fixed mouse events in all song modes (click and scroll). Added mid click to open song menu, left click to scroll songs using right arrows in chessboard mode and right click to return song screen from score screen.

--- a/game/themes/Party.ini
+++ b/game/themes/Party.ini
@@ -2126,6 +2126,7 @@ Align = 1
 [SongRouletteStaticNonParty1]
 X = 527
 Y = 405
+Z = 0.95
 W = 163
 H = 107
 Z = 0
@@ -2146,6 +2147,7 @@ Text = SING_SONG_SELECTION_LEGEND_TITLE
 [SongRouletteStaticNonParty2]
 X = 541
 Y = 430
+Z = 0.952
 W = 15
 H = 20
 Tex = icon_song_video
@@ -2166,6 +2168,7 @@ Text = SING_SONG_SELECTION_LEGEND_VIDEO
 [SongRouletteStaticNonParty3]
 X = 540
 Y = 450
+Z = 0.952
 W = 26
 H = 16
 Tex = icon_song_medley
@@ -2185,6 +2188,7 @@ Text = SING_SONG_SELECTION_LEGEND_MEDLEY
 [SongRouletteStaticNonParty4]
 X = 540
 Y = 470
+Z = 0.952
 W = 26
 H = 16
 Tex = icon_song_calcmedley
@@ -2205,6 +2209,7 @@ Text = SING_SONG_SELECTION_LEGEND_MEDLEYC
 [SongRouletteStaticNonParty5]
 X = 540
 Y = 490
+Z = 0.952
 W = 13
 H = 17
 Tex = icon_song_duet
@@ -3799,6 +3804,7 @@ Align = 1
 [SongCarouselStaticNonParty3]
 X = 582
 Y = 405
+Z = 0.95
 W = 163
 H = 107
 Z = 0
@@ -3819,6 +3825,7 @@ Text = SING_SONG_SELECTION_LEGEND_TITLE
 [SongCarouselStaticNonParty4]
 X = 596
 Y = 430
+Z = 0.952
 W = 15
 H = 20
 Tex = icon_song_video
@@ -3839,6 +3846,7 @@ Text = SING_SONG_SELECTION_LEGEND_VIDEO
 [SongCarouselStaticNonParty5]
 X = 595
 Y = 450
+Z = 0.952
 W = 26
 H = 16
 Tex = icon_song_medley
@@ -3858,6 +3866,7 @@ Text = SING_SONG_SELECTION_LEGEND_MEDLEY
 [SongCarouselStaticNonParty6]
 X = 595
 Y = 470
+Z = 0.952
 W = 26
 H = 16
 Tex = icon_song_calcmedley
@@ -3878,6 +3887,7 @@ Text = SING_SONG_SELECTION_LEGEND_MEDLEYC
 [SongCarouselStaticNonParty7]
 X = 595
 Y = 490
+Z = 0.952
 W = 13
 H = 17
 Tex = icon_song_duet
@@ -4590,7 +4600,7 @@ Color = White
 Size = 28
 Align = 1
 
-########## LEGEND ROULETTE #########
+########## LEGEND SLOT MACHINE #########
 
 [SongSlotMachineStaticNonParty1]
 X = 555
@@ -5422,11 +5432,12 @@ Color = White
 Size = 20
 Align = 1
 
-########## LEGEND CAROUSEL #########
+########## LEGEND SLIDE #########
 
 [SongSlideStatic3]
 X = 582
 Y = 405
+Z = 0.95
 W = 163
 H = 107
 Tex = BGFade
@@ -5446,6 +5457,7 @@ Text = SING_SONG_SELECTION_LEGEND_TITLE
 [SongSlideStatic4]
 X = 596
 Y = 430
+Z = 0.952
 W = 15
 H = 20
 Tex = icon_song_video
@@ -5466,6 +5478,7 @@ Text = SING_SONG_SELECTION_LEGEND_VIDEO
 [SongSlideStatic5]
 X = 595
 Y = 450
+Z = 0.952
 W = 26
 H = 16
 Tex = icon_song_medley
@@ -5485,6 +5498,7 @@ Text = SING_SONG_SELECTION_LEGEND_MEDLEY
 [SongSlideStatic6]
 X = 595
 Y = 470
+Z = 0.952
 W = 26
 H = 16
 Tex = icon_song_calcmedley
@@ -5505,6 +5519,7 @@ Text = SING_SONG_SELECTION_LEGEND_MEDLEYC
 [SongSlideStatic7]
 X = 595
 Y = 490
+Z = 0.952
 W = 13
 H = 17
 Tex = icon_song_duet
@@ -5521,7 +5536,7 @@ Size = 12
 Align = 0
 Text = SING_SONG_SELECTION_LEGEND_DUET
 
-#[SongCarouselTextScore]
+#[SongSlideTextScore]
 #X = 530
 #Y = 420
 #Color = ColorLight
