--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -2125,6 +2125,7 @@ Align = 1
 [SongRouletteStaticNonParty1]
 X = 527
 Y = 405
+Z = 0.95
 W = 163
 H = 107
 Z = 0
@@ -2145,6 +2146,7 @@ Text = SING_SONG_SELECTION_LEGEND_TITLE
 [SongRouletteStaticNonParty2]
 X = 541
 Y = 430
+Z = 0.952
 W = 15
 H = 20
 Tex = icon_song_video
@@ -2165,6 +2167,7 @@ Text = SING_SONG_SELECTION_LEGEND_VIDEO
 [SongRouletteStaticNonParty3]
 X = 540
 Y = 450
+Z = 0.952
 W = 26
 H = 16
 Tex = icon_song_medley
@@ -2184,6 +2187,7 @@ Text = SING_SONG_SELECTION_LEGEND_MEDLEY
 [SongRouletteStaticNonParty4]
 X = 540
 Y = 470
+Z = 0.952
 W = 26
 H = 16
 Tex = icon_song_calcmedley
@@ -2204,6 +2208,7 @@ Text = SING_SONG_SELECTION_LEGEND_MEDLEYC
 [SongRouletteStaticNonParty5]
 X = 540
 Y = 490
+Z = 0.952
 W = 13
 H = 17
 Tex = icon_song_duet
@@ -3798,6 +3803,7 @@ Align = 1
 [SongCarouselStaticNonParty3]
 X = 582
 Y = 405
+Z = 0.95
 W = 163
 H = 107
 Z = 0
@@ -3818,6 +3824,7 @@ Text = SING_SONG_SELECTION_LEGEND_TITLE
 [SongCarouselStaticNonParty4]
 X = 596
 Y = 430
+Z = 0.952
 W = 15
 H = 20
 Tex = icon_song_video
@@ -3838,6 +3845,7 @@ Text = SING_SONG_SELECTION_LEGEND_VIDEO
 [SongCarouselStaticNonParty5]
 X = 595
 Y = 450
+Z = 0.952
 W = 26
 H = 16
 Tex = icon_song_medley
@@ -3857,6 +3865,7 @@ Text = SING_SONG_SELECTION_LEGEND_MEDLEY
 [SongCarouselStaticNonParty6]
 X = 595
 Y = 470
+Z = 0.952
 W = 26
 H = 16
 Tex = icon_song_calcmedley
@@ -3877,6 +3886,7 @@ Text = SING_SONG_SELECTION_LEGEND_MEDLEYC
 [SongCarouselStaticNonParty7]
 X = 595
 Y = 490
+Z = 0.952
 W = 13
 H = 17
 Tex = icon_song_duet
@@ -4589,7 +4599,7 @@ Color = White
 Size = 28
 Align = 1
 
-########## LEGEND ROULETTE #########
+########## LEGEND SLOT MACHINE #########
 
 [SongSlotMachineStaticNonParty1]
 X = 555
@@ -5426,6 +5436,7 @@ Align = 1
 [SongSlideStatic3]
 X = 582
 Y = 405
+Z = 0.95
 W = 163
 H = 107
 Tex = BGFade
@@ -5445,6 +5456,7 @@ Text = SING_SONG_SELECTION_LEGEND_TITLE
 [SongSlideStatic4]
 X = 596
 Y = 430
+Z = 0.952
 W = 15
 H = 20
 Tex = icon_song_video
@@ -5465,6 +5477,7 @@ Text = SING_SONG_SELECTION_LEGEND_VIDEO
 [SongSlideStatic5]
 X = 595
 Y = 450
+Z = 0.952
 W = 26
 H = 16
 Tex = icon_song_medley
@@ -5484,6 +5497,7 @@ Text = SING_SONG_SELECTION_LEGEND_MEDLEY
 [SongSlideStatic6]
 X = 595
 Y = 470
+Z = 0.952
 W = 26
 H = 16
 Tex = icon_song_calcmedley
@@ -5504,6 +5518,7 @@ Text = SING_SONG_SELECTION_LEGEND_MEDLEYC
 [SongSlideStatic7]
 X = 595
 Y = 490
+Z = 0.952
 W = 13
 H = 17
 Tex = icon_song_duet
@@ -5520,7 +5535,7 @@ Size = 12
 Align = 0
 Text = SING_SONG_SELECTION_LEGEND_DUET
 
-#[SongCarouselTextScore]
+#[SongSlideTextScore]
 #X = 530
 #Y = 420
 #Color = ColorLight
