removed partialy 12 players support and fixed player name

--- a/game/themes/Party.ini
+++ b/game/themes/Party.ini
@@ -285,14 +285,14 @@ Color =
 Type = Transparent
 
 #choose avatar
-[NameStatic2]
-X = 30
-Y = 535
-W = 200
-H = 35
-Tex = MainBar
-Color =
-Type = Transparent
+#[NameStatic2]
+#X = 30
+#Y = 535
+#W = 200
+#H = 35
+#Tex = MainBar
+#Color =
+#Type = Transparent
 
 [NameText1]
 X = 30
@@ -329,14 +329,14 @@ Size = 22
 Align = 0
 Text = SING_PLAYER_NAME
 
-[NameText5]
-X = 50
-Y = 540
-Color = White
-Font = 0
-Size = 22
-Align = 0
-Text = SING_PLAYER_AVATAR
+#[NameText5]
+#X = 50
+#Y = 540
+#Color = White
+#Font = 0
+#Size = 22
+#Align = 0
+#Text = SING_PLAYER_AVATAR
 
 [NameSelectPlayerCount]
 Text = SING_PLAYER_COUNT
