Fix missing icon in Space skin

--- a/game/themes/common/Space.ini
+++ b/game/themes/common/Space.ini
@@ -160,7 +160,7 @@ Optionsbuttongraphics    = [Options]buttongraphics.png
 Optionsbuttonsound       = [Options]buttonsound.png
 Optionsbuttonlyrics      = [Options]buttonlyrics.png
 Optionsbuttondesign      = [Options]buttondesign.png
-Optionsbuttonrecord      = [Options]buttonduet.png
+Optionsbuttonmicrophones = [Options]buttonmicrophones.png
 Optionsbuttonadvanced    = [Options]buttonadvanced.png
 Optionsbuttonnetwork     = [Options]buttonnetwork.png
 Optionsbuttonwebcam      = [Options]buttonwebcam.png
