Unified subselection of songs in one method to simplify the calls to show searches, categories or playlist

--- a/game/themes/Party.ini
+++ b/game/themes/Party.ini
@@ -1977,7 +1977,13 @@ Tex = SongDuetSinger2
 [SongRouletteBackground]
 Tex = SongBG
 
-
+[SongRouletteTextCat]
+X = 72
+Y = 58
+Color = White
+Font = 0
+Size = 30
+Align = 0
 
 [SongRouletteCover]
 X = 300
