--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -1976,7 +1976,13 @@ Tex = SongDuetSinger2
 [SongRouletteBackground]
 Tex = SongBG
 
-
+[SongRouletteTextCat]
+X = 72
+Y = 58
+Color = White
+Font = 0
+Size = 30
+Align = 0
 
 [SongRouletteCover]
 X = 300
