Unified, reduced and optimized all methods to move songs

--- a/game/themes/Fantasy.ini
+++ b/game/themes/Fantasy.ini
@@ -1989,6 +1989,8 @@ X = 300
 Y = 150
 W = 200
 H = 150
+Rows = 1
+Cols = 5
 Reflections = 1
 
 [SongRouletteEqualizer]
@@ -3649,6 +3651,8 @@ X = 300
 Y = 120
 W = 200
 H = 200
+Rows = 1
+Cols = 3
 Padding = 60
 Reflections = 1
 
@@ -4478,6 +4482,8 @@ X = 60
 Y = 190
 W = 325
 H = 200
+Rows = 3
+Cols = 1
 
 [SongSlotMachineEqualizer]
 Visible = 1
@@ -5274,6 +5280,8 @@ X = 300
 Y = 120
 W = 200
 H = 200
+Rows = 1
+Cols = 11
 Padding = 60
 Reflections = 1
 ReflectionSpacing = 10
@@ -6169,9 +6177,10 @@ SelectW = 215
 SelectH = 161
 SelectReflection = 0
 SelectReflectionSpacing = 0
+Cols = 1
+Rows = 5
 Padding = 12
 Reflections = 0
-Rows = 5
 
 [SongListEqualizer]
 Visible = 0
