--- a/game/themes/Party.ini
+++ b/game/themes/Party.ini
@@ -1990,6 +1990,8 @@ X = 300
 Y = 150
 W = 200
 H = 150
+Rows = 1
+Cols = 5
 Reflections = 1
 
 [SongRouletteEqualizer]
@@ -3650,6 +3652,8 @@ X = 300
 Y = 120
 W = 200
 H = 200
+Rows = 1
+Cols = 3
 Padding = 60
 Reflections = 1
 
@@ -4479,6 +4483,8 @@ X = 60
 Y = 190
 W = 325
 H = 200
+Rows = 3
+Cols = 1
 
 [SongSlotMachineEqualizer]
 Visible = 1
@@ -5275,6 +5281,8 @@ X = 300
 Y = 120
 W = 200
 H = 200
+Rows = 1
+Cols = 11
 Padding = 60
 Reflections = 1
 ReflectionSpacing = 10
@@ -6170,9 +6178,10 @@ SelectW = 215
 SelectH = 161
 SelectReflection = 0
 SelectReflectionSpacing = 0
+Cols = 1
+Rows = 5
 Padding = 12
 Reflections = 0
-Rows = 5
 
 [SongListEqualizer]
 Visible = 0
